; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_omp-low.c_build_receiver_ref.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_omp-low.c_build_receiver_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@COMPONENT_REF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, %struct.TYPE_5__*)* @build_receiver_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @build_receiver_ref(i32* %0, i32 %1, %struct.TYPE_5__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %11 = call i32* @lookup_field(i32* %9, %struct.TYPE_5__* %10)
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = call i32* @maybe_lookup_field(i32* %12, %struct.TYPE_5__* %13)
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  store i32* %18, i32** %8, align 8
  br label %19

19:                                               ; preds = %17, %3
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32* @build_fold_indirect_ref(i32* %22)
  store i32* %23, i32** %7, align 8
  %24 = load i32, i32* @COMPONENT_REF, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @TREE_TYPE(i32* %25)
  %27 = load i32*, i32** %7, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32* @build3(i32 %24, i32 %26, i32* %27, i32* %28, i32* null)
  store i32* %29, i32** %7, align 8
  %30 = load i32, i32* %5, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %19
  %33 = load i32*, i32** %7, align 8
  %34 = call i32* @build_fold_indirect_ref(i32* %33)
  store i32* %34, i32** %7, align 8
  br label %35

35:                                               ; preds = %32, %19
  %36 = load i32*, i32** %7, align 8
  ret i32* %36
}

declare dso_local i32* @lookup_field(i32*, %struct.TYPE_5__*) #1

declare dso_local i32* @maybe_lookup_field(i32*, %struct.TYPE_5__*) #1

declare dso_local i32* @build_fold_indirect_ref(i32*) #1

declare dso_local i32* @build3(i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @TREE_TYPE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
